// Copyright 2022 Prysmatic Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package theqrl.qrl.v1;

import "proto/qrl/ext/options.proto";

option csharp_namespace = "TheQRL.QRL.V1";
option go_package = "github.com/theQRL/qrysm/proto/qrl/v1";
option java_multiple_files = true;
option java_outer_classname = "WithdrawalsProto";
option java_package = "org.theqrl.qrl.v1";
option php_namespace = "TheQRL\\QRL\\v1";

// The message requesting a ML-DSA-87 to execution withdrawal credentials change
message MLDSA87ToExecutionChange {
  // The validator index requesting the change
  uint64 validator_index = 1 [(theqrl.qrl.ext.cast_type) = "github.com/theQRL/qrysm/consensus-types/primitives.ValidatorIndex"];

  // The public key of the ML-DSA-87 address requesting the change
  bytes from_mldsa87_pubkey = 2 [(theqrl.qrl.ext.ssz_size) = "2592"];

  // The new execution address to be the withdrawal credentials
  bytes to_execution_address = 3 [(theqrl.qrl.ext.ssz_size) = "20"];
}

// The signed version of a MLDSA87ToExecutionChange
message SignedMLDSA87ToExecutionChange {
  // The MLDSA87ToExecutionChange message itself
  MLDSA87ToExecutionChange message = 1;

  // The 4627 byte ML-DSA-87 signature from the withdrawal address requesting the change
  bytes signature = 2 [(theqrl.qrl.ext.ssz_size) = "4627"];
}

// A list of SignedMLDSA87ToExecutionChange objects
message SubmitMLDSA87ToExecutionChangesRequest {
  repeated SignedMLDSA87ToExecutionChange changes = 1;
}
